--- a/src/widgets/BottomNavigation/ui/BottomNavigation.css
+++ b/src/widgets/BottomNavigation/ui/BottomNavigation.css
@@ -2,7 +2,7 @@
     margin: 16px;
     display: flex;
     margin-top: auto;
-    background-color: green;
+    background-color: var(--button_color);
     justify-content: center;
     gap: 16px;
     border-radius: 16px;
