--- a/src/index.css
+++ b/src/index.css
@@ -78,52 +78,13 @@ button:focus-visible {
 } */
 
 :root {
+  --black: #0E0E0E;
+  --second-black: #404040;
+  --white: #f5f5f5;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-}
-
-a {
-  color: var(--tg-theme-link-color);
-}
-#viewport {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  height: var(--tg-viewport-stable-height, 100vh);
-  pointer-events: none;
-  transition: all .2s ease;
-}
-#viewport:after {
-  content: '';
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  border-width: 4px;
-  border-style: solid;
-  border-image: linear-gradient(45deg, rgba(64, 224, 208, .5), rgba(173, 255, 47, .5)) 1;
-}
-
-#viewport-params-size,
-#viewport-params-expand {
-  content: attr(text);
-  position: absolute;
-  display: inline-block;
-  background: var(--tg-theme-link-color, rgb(64, 224, 208));
-  right: 4px;
-  left: auto;
-  font-size: 8px;
-  padding: 4px;
-  vertical-align: top;
-}
-#viewport-params-size {
-  top: 4px;
-}
-#viewport-params-expand {
-  top: 30px;
+  color: var(--white);
+  background-color: var(--black);
 }
 
 html, body, #root {
