--- a/src/pages/Home/ui/Home.css
+++ b/src/pages/Home/ui/Home.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
-    background-color: brown;
+    /* background-color: brown; */
 }
 
 .count {
