--- a/src/pages/Home/ui/Home.css
+++ b/src/pages/Home/ui/Home.css
@@ -1,18 +1,32 @@
-.home {
+.home-page {
     height: 100%;
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8px;
+    gap: 24px;
     /* background-color: brown; */
 }
 
-.count {
+.home-page__balance {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    gap: 12px;
+}
+
+.home-page__count {
+    font-weight: 500;
     font-size: 32px;
 }
 
-.clicker {
+.home-page__coin {
+    width: 40px;
+    height: 40px;
+}
+
+.home-page__clicker {
     height: 300px;
     width: 300px;
     border-radius: 50%;
