--- a/src/index.css
+++ b/src/index.css
@@ -110,8 +110,8 @@ html, body, #root {
 }
 
 .video {
-  /* height: 100%; */
-  width: 100%;
+  height: 100%;
+  /* width: 100%; */
   float: left;
   top: 0;
   padding: none;
