--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ html, body, #root {
 
 .video {
   height: 100%;
-  /* width: 100%; */
+  width: 100%;
   float: left;
   top: 0;
   padding: none;
