--- a/src/index.css
+++ b/src/index.css
@@ -110,11 +110,10 @@ html, body, #root {
 }
 
 .video {
-  /* height: 100%; */
-  width: 100%;
-  float: left;
-  top: 0;
-  padding: none;
   position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
   z-index: -100;
 }
