change css for bg

--- a/src/index.css
+++ b/src/index.css
@@ -110,10 +110,13 @@ html, body, #root {
 }
 
 .video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   position: fixed;
+  left: 0;
   right: 0;
+  top: 0;
   bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
   z-index: -100;
 }
