--- a/src/pages/Home/ui/Home.css
+++ b/src/pages/Home/ui/Home.css
@@ -39,10 +39,15 @@
     /* background-color: #ee6f57; */
     /* border-image: linear-gradient(#f6b73c, #4d9f0c) 1; */
     /* background: radial-gradient(#ee6f57, #883F32); */
-    background: radial-gradient(#ee6f57, #883F32) padding-box,
-              linear-gradient(125deg, #CB3737, #651B1B) border-box;
+    background: radial-gradient(#9F4A49, #6B1716) padding-box,
+              linear-gradient(#A93836, #8F1E1D) border-box;
   border-radius: 100%;
   border: 16px solid transparent;
+}
+
+.home-page__clicker:hover {
+    transition: .5s linear;
+    background-position: -200% 0, 0 0, 0 0, 0 100%, 0 4px, 0 calc(100% - 4px);
 }
 
 .home-page__ff {
