--- a/src/pages/Home/ui/Home.css
+++ b/src/pages/Home/ui/Home.css
@@ -45,12 +45,43 @@
   border: 16px solid transparent;
 }
 
-.home-page__clicker:hover {
-    transition: .5s linear;
-    background-position: -200% 0, 0 0, 0 0, 0 100%, 0 4px, 0 calc(100% - 4px);
-}
-
 .home-page__ff {
     height: 100%;
     width: 100%;
+}
+
+@keyframes glass-shine {
+    0% {
+        box-shadow: -100px -200px 50px 10px rgba(255, 255, 255, 0.8); /* начальное положение */
+    }
+    25% {
+        box-shadow: 400px 0 50px 10px rgba(255, 255, 255, 0.8); /* конечное положение */
+    }
+
+    100% {
+        box-shadow: 400px 0 50px 10px rgba(255, 255, 255, 0.8); /* конечное положение */
+    }
+}
+
+.glass {
+    border-radius: 100%;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.glass::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -50px;
+    width: 20px; /* ширина полоски блика */
+    height: 100%; /* высота равна высоте контейнера */
+    background:  rgba(255, 255, 255, 0.8);
+    animation-duration: 8s;  
+    animation-name: glass-shine;
+    animation-timing-function: ease-in-out;     
+    animation-iteration-count: infinite;   
+    transform: rotate(30deg);
 }
