--- a/src/pages/Home/ui/Home.css
+++ b/src/pages/Home/ui/Home.css
@@ -31,3 +31,15 @@
     height: 40px;
 }
 
+.home-page__energy {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
+}
+
+.home-page__energy__text {
+    font-size: 20px;
+    font-weight: 400;
+}
