--- a/src/index.css
+++ b/src/index.css
@@ -67,15 +67,9 @@ button:focus-visible {
   }
 } */
 
-/* body {
-  --bg-color: var(--tg-theme-bg-color);
-  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, Verdana, sans-serif;
-  background-color: var(--bg-color);
-  color: var(--tg-theme-text-color);
-  margin: 48px 24px;
-  padding: 0;
-  color-scheme: var(--tg-color-scheme);
-} */
+body {
+  overflow: hidden;
+}
 
 :root {
   --black: #0E0E0E;
