--- a/src/widgets/BottomNavigation/ui/BottomNavigation.css
+++ b/src/widgets/BottomNavigation/ui/BottomNavigation.css
@@ -26,15 +26,15 @@
   gap: 4px;
   font-size: 10px;
   font-weight: 400;
-  background-color: #292929;
+  /* background-color: #292929; */
 }
 
 .bloc-active {
-  background-color: #262521;
+  background-color: #292929;
 }
 
 .navbar--icon {
   fill: var(--white);
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
 }
